--- a/pages/contactsales.html
+++ b/pages/contactsales.html
@@ -91,13 +91,150 @@
     
         </nav>
       </header>
-    
 
+      <!-- MAIN BODY SECTION -->
+      <main class="container-fluid" id="main">
+          <!-- Form Section -->
+          <section class="section-1">
+            <form>
+                <div class="row my-4">
+                    <div class="col">
+                      <label for="exampleInputPassword1" class="form-label">Last Name</label>
+                      <input type="text" class="form-control">
+                    </div>
+                    <div class="col">
+                      <label for="exampleInputPassword1" class="form-label">First Name</label>
+                      <input type="text" class="form-control">
+                    </div>
+                  </div>
+                  <!-- <div class="form-group">
+                    <label for="exampleInputPassword1" class="form-label">Phone Number</label>
+                    <input type="tel" class="form-control" id="phone" required="required">
+                    <div class="invalid-feedback">
+                      You must enter a valid mobile number
+                    </div>
+                  </div> -->
+                  <div class="mb-4">
+                    <label for="exampleInputPassword1" class="form-label">Work Email</label>
+                    <input type="email" class="form-control" id="exampleInputPassword1">
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleFormControlSelect1">Product of Interest</label>
+                    <select class="form-control" id="exampleFormControlSelect1">
+                      <option class="option">Select an option</option>
+                    </select>
+                  </div>
+                  <div class="row my-4">
+                    <div class="col">
+                      <label for="exampleInputPassword1" class="form-label">Company Name</label>
+                      <input type="text" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label for="exampleFormControlSelect1">Company Size</label>
+                        <select class="form-control" id="exampleFormControlSelect1">
+                          <option class="option">Select an option</option>
+                        </select>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleFormControlTextarea1">How can our expert help you?</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  </div>
+                  <button type="submit" class="btn mt-3">Contact Us</button>
+              </form>
+          </section>
+          <!-- Content Section -->
+          <section class="section-2">
+              <div class="title">
+                <h4>Request a call from an expert</h4>
+                <p>Having thoughts on which product works best for you?  Fill the form and our expert will reach out to you.</p>
+              </div>
+              <div class="body">
+                  <h4>Our offices around Africa</h4>
+                  <div class="body-grid">
+                      <div class="box">
+                          <h3>NIGERIA</h3>
+                          <p>33a, Adeola Odeku, Victoria 
+                            Island, Lagos.
+                            +234-(0)-8000000000
+                           </p>
+                      </div>
+                      <div class="box">
+                        <h3>GHANA</h3>
+                        <p>45, El-Senoussi Street, 
+                            Accra
+                            +233-(0)-277619819
+                         </p>
+                    </div>
+                    <div class="box">
+                        <h3>SOUTH AFRICA</h3>
+                        <p>474, Cheriton Drive, Port 
+                            Shepstone, Kwazulu-Natal
+                            +27-(0)-857926978
+                         </p>
+                    </div>
+                  </div>
+                  <div class="body-grid">
+                    <div class="box">
+                        <h3>EGYPT</h3>
+                        <p>72, Gameat El-Dewal 
+                            El-Arabia St., Giza.
+                            +20-(0)-35924295
+                         </p>
+                    </div>
+                    <div class="box">
+                      <h3>KENYA</h3>
+                      <p>41, Enterprise Rd., Industrial
+                        Area , Niarobi
+                        +254-(0)-20536766
+                       </p>
+                  </div>
+                  <div class="box">
+                      <h3>TUNISIA</h3>
+                      <p>13, Rue de Makthar, Dhraa
+                        Governorate Kasserine
+                        +216-(0)-77367410
+                       </p>
+                  </div>
+                </div>
+                <div class="body-grid">
+                    <div class="box">
+                        <h3>MALI</h3>
+                        <p>22, Badalabougou Est.,
+                            Bamako.
+                            +223-(0)-78175387
+                         </p>
+                    </div>
+                    <div class="box">
+                      <h3>TANZANIA</h3>
+                      <p>Mbezi Beach, P.O.B: 70339,
+                        Dar Salaam
+                        +255-(0)-222120119
+                       </p>
+                  </div>
+                  <div class="box">
+                      <h3>TOGO</h3>
+                      <p>10, E rue des Echis, 
+                        Lome
+                        +228-(0)-22229600
+                       </p>
+                  </div>
+                </div>
+              </div>
+          </section>
+      </main>
+
+      <script>
+          $("input").intlTelInput({
+                utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/8.4.6/js/utils.js"
+            });
+      </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </body>
 </html>
