Done the Landing Page and Started the Enterprise Page

--- a/index.html
+++ b/index.html
@@ -82,16 +82,249 @@
                   <form class="form-inline my-2">
                     <a href="./pages/contactsales.html" class="login mr-4">Contact Sales</a>
                     <a href="./pages/login.html" class="login mr-4">Login</a>
-                    <button class="btn border mr-2 sign-up" type="submit">
+                    <a href="#" class="free mr-2" type="submit">
                       Try For Free &nbsp; >
-                    </button>
+                    </a>
                   </form>
                 </div>
             </div>
     
         </nav>
       </header>
-    
+
+        <!-- First Section -->
+        <section id="first-section">
+          <div class="first-section-grid container">
+            <div class="first-section-a">
+              <h2>Collaborate with your team <br> and get more done</h2>
+              <p>Communicate effectively with Oneburner for easy <br> collaboration, team work and remote work.</p>
+              <a href="#" class="btn border sign-up" type="submit">
+                Try For Free &nbsp; >
+              </a>
+            </div>
+            <div class="first-section-b">
+              <img src="./assets/images/lanidng-image.svg" alt="Landing Page Image">
+            </div>
+          </div>
+        </section>
+
+        <!-- Second Section -->
+        <section id="second-section" class="container">
+          <h2>Over 500+ companies bond teams together with Oneburner</h2>
+          <div class="second-section-grid">
+            <div class="box" id="paystack">
+              <img src="./assets/images/paystack-removebg-preview 1.svg" alt="Paystack Logo">
+            </div>
+            <div class="box" id="egyptair">
+              <img src="./assets/images/egyptair-removebg-preview 1.svg" alt="Egyptair Logo">
+            </div>
+            <div class="box">
+              <img src="./assets/images/dangote-removebg-preview 1.svg" alt="Dangote Logo">
+            </div>
+            <div class="box">
+              <img src="./assets/images/standardbank-removebg-preview 1.svg" alt="Standard Bank Logo">
+            </div>
+            <div class="box">
+              <img src="./assets/images/MTN 1.svg" alt="MTN Logo">
+            </div>
+            <div class="box">
+              <img src="./assets/images/gtbank 1.svg" alt="GTB Logo">
+            </div>
+            <div class="box">
+              <img src="./assets/images/Header Logo 1.svg" alt="Skooleeo Logo">
+            </div>
+          </div>
+        </section>
+
+        <!-- Third Section -->
+        <section id="third-section">
+          <ul class="nav nav-pills nav-fill container">
+            <li class="nav-item">
+              <a class="nav-link" id="isactive" href="#">CRM & Sales</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Human Resources</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Marketing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Remote Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Project Management</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Social Media</a>
+            </li>
+          </ul>
+
+          <!-- Third Section -->
+          <div class="third-section-grid container">
+            <div class="third-section-a">
+              <h2>Manage team activities <br> all in one place</h2>
+              <p>Keep your team organized and informed with activities <br> that are up to date.</p>
+            </div>
+            <div class="third-section-b">
+              <img src="./assets/images/Rectangle 25.svg" alt="Landing Page Image">
+            </div>
+          </div>
+        </section>
+
+        <!-- Fourth Section -->
+        <div id="fourth-section">
+          <div class="fourth-section-grid container">
+            <div class="fourth-section-a">
+              <img src="./assets/images/Frame 2 1.svg" alt="Landing Page Image">
+            </div>
+            <div class="fourth-section-b">
+              <h2>Bring your team up to speed</h2>
+              <p>Collaborate on project from start to finish, see information at a <br>
+                 glance, add comment, attachment and more with Oneburner.</p>
+            </div>
+          </div>
+        </div>
+
+         <!-- Fifth Section -->
+      <section id="fifth-section">
+         <div class="fifth-section-grid container">
+          <div class="fifth-section-a">
+            <h2>Automated task timeline</h2>
+            <p>View dates, projects, calendar, sprint and more with reliability.</p>
+          </div>
+          <div class="fifth-section-b">
+            <img src="./assets/images/Rectangle 22.svg" alt="Landing Page Image">
+          </div>
+        </div>
+      </section>
+
+      <!-- Special Section -->
+      <section id="special-section" class="container">
+        <h2>Integrate with your favourite tools easily in one click</h2>
+        <div class="box-grid-1">
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/slack-new-logo 1.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/official-gmail-icon-2020-.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/linkedin-icon-2.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/mailchimp-freddie-icon.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/dropbox-2.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/facebook-3-2.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/onenote-icon.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/facebook-messenger-3.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/whatsapp-icon.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/sendgrid.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="./assets/images/github-icon-1.svg" alt="slack logo"></a>
+          </div>
+        </div>
+        <div class="box-grid-2">
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/outlook-icon.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/box-39.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/onenote-icon (1).svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/microsoft-teams-1.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/microsoft-sharepoint.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/youtube-3.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/zeplin.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/excel-4.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/microsoft-powerpoint-2013.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/microsoft-access-2013.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="./assets/images/wordpress-blue 1.svg" alt="Outlook Logo"></a>
+          </div>
+        </div>
+      </section>
+
+         <!-- Sixth Section -->
+         <div id="fourth-section">
+          <div class="fourth-section-grid container">
+            <div class="fourth-section-a">
+              <img src="./assets/images/Rectangle 21.svg" alt="Landing Page Image">
+            </div>
+            <div class="fourth-section-b">
+              <h2>Timeless report generator</h2>
+              <p>You can generate quick report of activities of all that has to do <br>
+                 with the daily running of your business and teams.
+              </p>
+            </div>
+          </div>
+        </div>
+
+          <!-- Seventh Section -->
+          <section id="fifth-section">
+            <div class="fifth-section-grid container">
+             <div class="fifth-section-a">
+               <h2>Efficient lead management</h2>
+               <p>Track and manage prospective customers. Manage their notes, emails, <br>
+                 meetings, calls, contacts, and files.</p>
+             </div>
+             <div class="fifth-section-b">
+               <img src="./assets/images/Rectangle 19.svg" alt="Landing Page Image">
+             </div>
+           </div>
+         </section>
+
+         <!-- Eight Section -->
+         <div id="fourth-section">
+          <div class="fourth-section-grid container">
+            <div class="fourth-section-a">
+              <img src="./assets/images/Component 3.svg" alt="Landing Page Image">
+            </div>
+            <div class="fourth-section-b">
+              <h2>24/7 customer support</h2>
+              <p>Our team of responsible member is always available to help you all day long <br>
+                 and ready to meet your demand. Reach out to us and we will always be there.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Nineth Section -->
+        <section id="nineth-section" class="container-fluid">
+          <h2>Choose a better way to work</h2>
+          <p>No credit card details | No additional installation | No time wasting</p>
+          <a href="#" class="btn border mr-2 sign-up" type="submit">
+            Try For Free &nbsp; >
+        </a>
+        </section>
 
       <!-- FOOTER SECTION -->
       <footer class="container">
