--- a/pages/login.html
+++ b/pages/login.html
@@ -27,63 +27,11 @@
                   aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-          
-                <!-- <div class="collapse navbar-collapse"></div>
-                <div class="collapse navbar-collapse" id="navbarMenu">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item dropdown position-static">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Product
-                        </a>
-                        <div class="dropdown-menu mt-0 w-100" aria-labelledby="dropdownMenuButton">
-                            <div id="drop-display">
-                                <div class="dropdown-item">
-                                    <div class="drop-icon"><i class="fas fa-briefcase"></i></div>
-                                    <div class="drop-desc">
-                                        <h3>Clients</h3>
-                                        <p>See the amazing team <br> that uses Oneburner.</p>
-                                    </div>
-                                </div>
-                                <div class="dropdown-item">
-                                  <div class="drop-icon"><i class="fas fa-store"></i></div>
-                                  <div class="drop-desc">
-                                      <h3>Oneburner Stores</h3>
-                                      <p>Explore our ready made solutions <br> to expand your business.</p>
-                                  </div>
-                              </div>
-                              <div class="dropdown-item">
-                                  <div class="drop-icon"><i class="fas fa-plug"></i></div>
-                                  <div class="drop-desc">
-                                      <h3>Integrations</h3>
-                                      <p>Connect different solution <br> to Oneburner and get more done.</p>
-                                  </div>
-                              </div>
-                              <div class="dropdown-item">
-                                  <div class="drop-icon"><i class="fas fa-book"></i></div>
-                                  <div class="drop-desc">
-                                      <h3>Why Oneburner?</h3>
-                                      <p>Learn more about our features, <br> success rates,benefits and demo.</p>
-                                  </div>
-                              </div>
-                            </div>
-                        </div>
-                      </li>
-                    <li class="nav-item">
-                      <a href="#" class="nav-link">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="../pages/enterprise.html" class="nav-link">Enterprise</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="#" class="nav-link">Support</a>
-                    </li>
-                  </ul> -->
-          
                   <form class="form-inline my-2">
                     <a href="#" class="login mr-4">New Customer?</a>
-                    <button class="btn border mr-2 sign-up" type="submit">
+                    <a href="#" class="free mr-2" type="submit">
                       Try For Free &nbsp; >
-                    </button>
+                    </a>
                   </form>
                 </div>
             </div>
