--- a/pages/enterprise.html
+++ b/pages/enterprise.html
@@ -82,9 +82,9 @@
                   <form class="form-inline my-2">
                     <a href="../pages/contactsales.html" class="login mr-4">Contact Sales</a>
                     <a href="../pages/login.html" class="login mr-4">Login</a>
-                    <button class="btn border mr-2 sign-up" type="submit">
+                    <a href="#" class="free mr-2" type="submit">
                       Try For Free &nbsp; >
-                    </button>
+                    </a>
                   </form>
                 </div>
             </div>
