Done all pages but still needs little tweaking

--- a/pages/enterprise.html
+++ b/pages/enterprise.html
@@ -91,7 +91,185 @@
     
         </nav>
       </header>
+
+      <!-- First Section -->
+      <section id="landing-section" class="container">
+        <div class="vector"></div>
+        <div class="grid">
+          <h2>Modern solution built for your <br> enterprise growth</h2>
+          <img src="../assets/images/Group 34.svg" alt="Image">
+        </div>
+        <p>Centralize your team in a secure, flexible and managed platform</p>
+        <a href="#" class="btn border mr-2" type="submit">
+          Request a demo &nbsp; >
+      </a>
+        <div class="grid-1">
+          <img class="second-image" src="../assets/images/Group 32.svg" alt="Image">
+          <a href="#" class="btn border mr-2" type="submit">
+            Request a demo &nbsp; >
+        </a>
+        </div>
+      </section>
     
+
+      <!-- Second Section -->
+      <section id="second-section" class="container">
+        <h2>Over 500+ companies bond teams together with Oneburner</h2>
+        <div class="second-section-grid">
+          <div class="box" id="paystack">
+            <img src="../assets/images/paystack-removebg-preview 1.svg" alt="Paystack Logo">
+          </div>
+          <div class="box" id="egyptair">
+            <img src="../assets/images/egyptair-removebg-preview 1.svg" alt="Egyptair Logo">
+          </div>
+          <div class="box">
+            <img src="../assets/images/dangote-removebg-preview 1.svg" alt="Dangote Logo">
+          </div>
+          <div class="box">
+            <img src="../assets/images/standardbank-removebg-preview 1.svg" alt="Standard Bank Logo">
+          </div>
+          <div class="box">
+            <img src="../assets/images/MTN 1.svg" alt="MTN Logo">
+          </div>
+          <div class="box">
+            <img src="../assets/images/gtbank 1.svg" alt="GTB Logo">
+          </div>
+          <div class="box">
+            <img src="../assets/images/Header Logo 1.svg" alt="Skooleeo Logo">
+          </div>
+        </div>
+      </section>
+
+         <!-- Nineth Section -->
+         <section id="benefit-section" class="container-fluid">
+          <h2>How Oneburner help enterprises grow</h2>
+          <div class="benefit-section-grid container">
+            <div class="benefit-a">
+              <p>
+                Oneburner software solution helps your business by creating an enabling environment <br> for 
+              easy communication and feedbacks in real time. 
+              Oneburner brings all your user <br> and teams in a single place with 99.99% uptime SLA and Data security
+              </p>
+            </div>
+            <div class="benefit-b">
+              <ul>
+                <li><i class="fas fa-check-circle"></i> Data protection and control</li>
+                <li><i class="fas fa-check-circle"></i> Reporting and analytics</li>
+                <li><i class="fas fa-check-circle"></i> Use single sign-on and multi-factor authentication to secure accounts</li>
+                <li><i class="fas fa-check-circle"></i> Enterprise integration with other tools</li>
+              </ul>
+            </div>
+          </div>
+        </a>
+        </section>
+
+      <!-- Special Section -->
+      <section id="special-section" class="container">
+        <h2>Integrate with your favourite tools easily in one click</h2>
+        <div class="box-grid-1">
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/slack-new-logo 1.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/official-gmail-icon-2020-.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/linkedin-icon-2.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/mailchimp-freddie-icon.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/dropbox-2.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/facebook-3-2.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/onenote-icon.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/facebook-messenger-3.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/whatsapp-icon.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/sendgrid.svg" alt="slack logo"></a>
+          </div>
+          <div class="box-1">
+            <a href="#"><img src="../assets/images/github-icon-1.svg" alt="slack logo"></a>
+          </div>
+        </div>
+        <div class="box-grid-2">
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/outlook-icon.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/box-39.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/onenote-icon (1).svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/microsoft-teams-1.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/microsoft-sharepoint.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/youtube-3.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/zeplin.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/excel-4.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/microsoft-powerpoint-2013.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/microsoft-access-2013.svg" alt="Outlook Logo"></a>
+          </div>
+          <div class="box-2">
+            <a href="#"><img src="../assets/images/wordpress-blue 1.svg" alt="Outlook Logo"></a>
+          </div>
+        </div>
+      </section>
+
+      <section id="map-section">
+        <h2>Our Regional Presence</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br>
+           been the industry's standard dummy text ever since the 1500s, when an unknown printer </p>
+        <img src="../assets/images/africa 1.svg" alt="Africa Map">
+      </section>
+
+      <section id="testimony-section" class="container">
+        <div class="desc">
+          <p>
+            Best. Product. Ever! We like Oneburner more and more each day because it makes our work a lot easier.
+          </p>  
+          <p>
+            It's just amazing. Very easy to use, impressed us on multiple levels. 
+          </p>
+          <p>
+            Thank you so much for your help and is worth much more than we paid. We were treated like royalty.
+          </p>
+        </div>
+        <div class="img">
+          <span><img src="../assets/images/Group 36.svg" alt="Image"></span>
+        </div>
+      </section>
+
+      <!-- Contact Sales Section -->
+      <section id="contact-sales">
+        <h2>Want to learn more on how we can <br> impact your enterprise?</h2>
+        <a href="./contactsales.html" class="btn border sign-up" type="submit">
+          Contact Sales &nbsp; >
+        </a>
+      </section>
+
 
       <!-- FOOTER SECTION -->
       <footer class="container">
